# overwatch-queue-discord-bot

./: .gitignore  LICENCE  README.md  __main__.py  battlenet_interface.py  discord_bot.py  justfile  overwatch_queue.py  pyproject.toml  requirements.txt  session.py  storage_layer.py
bot_code/: __main__.py  discord_bot.py  game_queue.py  overwatch_queue.py  patch_scraper.py  storage_layer.py
code/: __main__.py  discord_bot.py  game_queue.py  queue_bot.py
db/: .gitignore
tests/: conftest.py  test_overwatch_queue.py
