[tool.poetry]
name = "overwatch-queue-discord-bot"
version = "0.1.0"
description = "Creates a queue of overwatch players if there are more than 6 players"
authors = ["Alexander M Jones", "JMayo"]
license = "MIT"

[tool.poetry.dependencies]
python = "*"
aiohttp = "==3.6.3"
appdirs = "==1.4.4"
argh = "==0.26.2"
astroid = "==2.4.2"
async-timeout = "==3.0.1"
attrs = "==20.3.0"
beautifulsoup4 = "==4.9.3"
bs4 = "==0.0.1"
certifi = "==2020.12.5"
chardet = "==3.0.4"
cssselect = "==1.1.0"
discord = "==1.0.1"
"discord.py" = "==1.5.1"
emoji = "==0.6.0"
fake-useragent = "==0.1.11"
idna = "==2.10"
inflect = "==5.0.2"
iniconfig = "==1.1.1"
isort = "==5.6.4"
lazy-object-proxy = "==1.4.3"
lxml = "==4.6.2"
mccabe = "==0.6.1"
multidict = "==4.7.6"
over-stats = "==0.4.0"
packaging = "==20.8"
parse = "==1.18.0"
pluggy = "==0.13.1"
py = "==1.10.0"
pyee = "==7.0.4"
pylint = "==2.6.0"
pyparsing = "==2.4.7"
pyppeteer = "==0.2.2"
pyquery = "==1.4.3"
pytest = "==6.2.1"
python-dotenv = "==0.15.0"
pyyaml = "==5.3.1"
regex = "==2020.11.13"
requests = "==2.25.1"
requests-html = "==0.10.0"
six = "==1.15.0"
soupsieve = "==2.1"
toml = "==0.10.2"
tqdm = "==4.54.1"
typing-extensions = "==3.7.4.3"
urllib3 = "==1.26.2"
w3lib = "==1.22.0"
watchdog = "==1.0.2"
websockets = "==8.1"
wrapt = "==1.12.1"
yarl = "==1.5.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
